<resources>
    <string name="app_name">Rebuild</string>
    <string name="app_name_full">Rebuild.fm for Android</string>

    <string name="activity_settings">Settings</string>
    <string name="activity_about">About This App</string>
    <string name="activity_recent_changes">Recent Changes</string>
    <string name="activity_licenses">OSS Licenses</string>

    <string name="rebuild_description">A Podcast by Tatsuhiko Miyagawa. Talking about Tech, Software Development and Gadgets.</string>
    <string name="app_description">The best podcast player to listen to Rebuild.fm.</string>
    <string name="copyright">Rebuild.fm for Android, Version %1$s. Copyright © 2013 by rejasupotaro</string>
    <string name="share">share</string>
    <string name="cancel">cancel</string>
    <string name="downloaded">{fa-download} downloaded</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading...</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="network_error">Network error\nPlease check the network</string>
    <string name="network_error_message">An error occurred while requesting rss feed.</string>
    <string name="not_implemented_yet">Not implemented yet</string>
    <string name="compose_new_tweet">Compose new Tweet...</string>
    <string name="episode_download_completed">Donwload Completed</string>
    <string name="episode_sponsor_text">Sponsor: %1$s</string>

    <string name="label_timeline">#rebuildfm</string>

    <string name="default_duration">00:00</string>
    <string name="share_episode">Share Episode</string>

    <string name="action_settings">Settings</string>
    <string name="action_download">@string/download</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_share">Share</string>
    <string name="action_clear_cache">@string/clear_cache</string>

    <string name="pref_title_notification">NOTIFICATION</string>
    <string name="pref_key_notification_episodes">notification_episodes</string>
    <string name="pref_title_notification_episodes">Episodes</string>
    <string name="pref_summary_notification_episodes">Notify when a new episode appears</string>
    <string name="pref_title_more">MORE</string>
    <string name="pref_title_website">Rebuild.fm website</string>
    <string name="pref_title_about">About This App</string>
    <string name="pref_title_recent_changes">Recent Changes</string>
    <string name="pref_title_licenses">OSS Licenses</string>
    <string name="pref_title_dbinspector">DB Inspector</string>

    <string name="about_item_header_developer">Developer</string>
    <string name="about_item_header_contributors">Contributors</string>
    <string name="about_item_header_recent_changes">Recent changes</string>

    <string name="report_dialog_title">Sorry...</string>
    <string name="report_dialog_body">"Unfortunately, This application has stopped"</string>
    <string name="report_dialog_positive_button">report</string>

    <string name="notification_pause">Pause</string>
    <string name="notification_resume">Resume</string>
    <string name="notification_stop">Stop</string>

    <string name="guest_profile_text">profile</string>
    <string name="guest_website_text">website</string>
    <string name="label_website">website</string>
</resources>
