<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/episode_list_header_height"
            >
        <LinearLayout
                android:orientation="vertical"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
            <TextView
                    android:text="@string/app_name"
                    android:textSize="28sp"
                    style="@style/RebuildLogText"
                    />
            <TextView
                    android:text="@string/rebuild_description"
                    android:textSize="8sp"
                    style="@style/RebuildLogText"
                    />
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_header_link_text"
                android:padding="@dimen/padding_frame"
                >
            <rejasupotaro.rebuild.views.FontAwesomeTextView
                    android:id="@+id/link_text_website"
                    android:text="@string/label_website"
                    android:layout_marginRight="3dp"
                    style="@style/HeaderLinkText"
                    />
            <rejasupotaro.rebuild.views.FontAwesomeTextView
                    android:id="@+id/link_text_twitter"
                    android:text="@string/label_timeline"
                    android:layout_marginLeft="3dp"
                    style="@style/HeaderLinkText"
                    />
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>

