<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_white_and_clickable"
        >
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_contents"
            android:orientation="horizontal"
            >
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_launcher"
                />
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/padding_contents"
                >
            <TextView
                    style="@style/RebuildLogText"
                    android:layout_width="match_parent"
                    android:textColor="@android:color/black"
                    android:text="@string/app_name_full"
                    android:textSize="@dimen/primary_text_size"
                    />
            <TextView
                    style="@style/RebuildLogText"
                    android:layout_width="match_parent"
                    android:textColor="@android:color/black"
                    android:text="@string/app_description"
                    android:textSize="@dimen/quaternary_text_size"
                    />
        </LinearLayout>
    </LinearLayout>
    <TextView
            android:id="@+id/copyright_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_contents"
            android:paddingRight="@dimen/padding_contents"
            android:paddingBottom="@dimen/padding_contents"
            android:layout_gravity="center"
            android:text="@string/copyright"
            android:textSize="@dimen/quaternary_text_size"
            />
    <rejasupotaro.rebuild.views.VerticalSeparator
            android:layout_width="match_parent"
            android:layout_height="1dp"
            />
</LinearLayout>
